fixed broken layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,12 +58,6 @@
     src: url('../fonts/DelaGothicOne-Regular.ttf') format('truetype');
 }
 
-.btn-area {
-    display: flex; /* Align items horizontally */
-    align-items: center; /* Center them vertically */
-    /* justify-content: center; Center the items horizontally if needed */
-}
-
 .store-badge {
     height: 50px; /* Match the button's height */
     margin-left: 10px; /* Add some space between the button and the image */
